[gd_scene load_steps=79 format=2]

[ext_resource path="res://scripts/gameplay/open_option.gd" type="Script" id=1]
[ext_resource path="res://scripts/options/volume.gd" type="Script" id=2]
[ext_resource path="res://scripts/gameplay/pause.gd" type="Script" id=3]
[ext_resource path="res://scripts/gameplay/score.gd" type="Script" id=4]
[ext_resource path="res://scripts/gameplay/highscore.gd" type="Script" id=5]
[ext_resource path="res://scripts/gameplay/timer.gd" type="Script" id=6]
[ext_resource path="res://scripts/gameplay/brain.gd" type="Script" id=7]
[ext_resource path="res://art/gameplay/block easy/red.png" type="Texture" id=8]
[ext_resource path="res://art/gameplay/block easy/green.png" type="Texture" id=9]
[ext_resource path="res://art/gameplay/block easy/black.png" type="Texture" id=10]
[ext_resource path="res://art/gameplay/block easy/blue.png" type="Texture" id=11]
[ext_resource path="res://art/gameplay/game back ground final.png.png" type="Texture" id=12]
[ext_resource path="res://art/gameplay/block colourblind/colourblind.png" type="Texture" id=13]
[ext_resource path="res://art/gameplay/block easy/yellow.jpg" type="Texture" id=14]
[ext_resource path="res://art/gameplay/cursor/frame.png" type="Texture" id=15]
[ext_resource path="res://art/gameplay/cursor/frame (4).png" type="Texture" id=16]
[ext_resource path="res://art/gameplay/cursor/frame (2).png" type="Texture" id=17]
[ext_resource path="res://art/gameplay/cursor/frame (3).png" type="Texture" id=18]
[ext_resource path="res://art/gameplay/block ore/ores (1).png" type="Texture" id=19]
[ext_resource path="res://scripts/gameplay/background.gd" type="Script" id=20]
[ext_resource path="res://scripts/gameplay/block.gd" type="Script" id=21]
[ext_resource path="res://art/gameplay/block gem/Gems by baxteria (1).png" type="Texture" id=22]
[ext_resource path="res://art/gameplay/fire.png" type="Texture" id=23]
[ext_resource path="res://art/gameplay/block ore/fossils (1).png" type="Texture" id=24]
[ext_resource path="res://music/gamebgm.wav" type="AudioStream" id=25]
[ext_resource path="res://scripts/gameplay/goalpro.gd" type="Script" id=26]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=27]

[sub_resource type="CircleShape2D" id=1]
radius = 3.80058

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 225, 225 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 22 )
region = Rect2( 0, 225, 225, 225 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 22 )
region = Rect2( 225, 225, 225, 225 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 22 )
region = Rect2( 225, 0, 225, 225 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 225, 225 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 19 )
region = Rect2( 225, 0, 225, 225 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 19 )
region = Rect2( 0, 225, 225, 225 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 19 )
region = Rect2( 225, 225, 225, 225 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 24 )
region = Rect2( 200, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 200, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 10 ) ],
"loop": true,
"name": "easy",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 53 ) ],
"loop": false,
"name": "gem",
"speed": 0.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 50 ) ],
"loop": true,
"name": "ores",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "colourblind",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=60]
font_data = ExtResource( 27 )

[sub_resource type="DynamicFont" id=61]
font_data = ExtResource( 27 )

[sub_resource type="DynamicFont" id=62]
font_data = ExtResource( 27 )

[sub_resource type="Curve2D" id=18]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 119, 166, 0, 0, 0, 0, 28, 165, 0, 0, 0, 0, 4, 174, 0, 0, 0, 0, 5, 189, 0, 0, 0, 0, 45, 191, 0, 0, 0, 0, 73, 193, 0, 0, 0, 0, 98, 190, 0, 0, 0, 0, 144, 191, 0, 0, 0, 0, 163, 193, 0, 0, 0, 0, 183, 193, 0, 0, 0, 0, 189, 186, 0, 0, 0, 0, 201, 187, 0, 0, 0, 0, 205, 191, 0, 0, 0, 0, 212, 183, 0, 0, 0, 0, 215, 174, 0, 0, 0, 0, 208, 170, 0, 0, 0, 0, 208, 165, 0, 0, 0, 0, 213, 159, 0, 0, 0, 0, 222, 158, 0, 0, 0, 0, 224, 161, 0, 0, 0, 0, 232, 161, 0, 0, 0, 0, 238, 161, 0, 0, 0, 0, 242, 161 )
}

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 23 )
region = Rect2( 31, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 23 )
region = Rect2( 62, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 23 )
region = Rect2( 93, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 23 )
region = Rect2( 124, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 23 )
region = Rect2( 0, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 23 )
region = Rect2( 31, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 23 )
region = Rect2( 62, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 23 )
region = Rect2( 93, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 23 )
region = Rect2( 124, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 23 )
region = Rect2( 0, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 23 )
region = Rect2( 31, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 23 )
region = Rect2( 62, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 23 )
region = Rect2( 93, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 23 )
region = Rect2( 124, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 23 )
region = Rect2( 0, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 23 )
region = Rect2( 31, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 23 )
region = Rect2( 62, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 23 )
region = Rect2( 93, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 23 )
region = Rect2( 124, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 23 )
region = Rect2( 0, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 23 )
region = Rect2( 31, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 23 )
region = Rect2( 62, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 23 )
region = Rect2( 93, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 23 )
region = Rect2( 124, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 23 )
region = Rect2( 0, 160, 31, 32 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=46]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 148, 165, 0, 0, 0, 0, 6, 166 )
}

[sub_resource type="DynamicFont" id=59]
font_data = ExtResource( 27 )

[node name="gameplay" type="Node2D"]

[node name="cursor_brain" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 80, 80 )
scale = Vector2( 3, 3 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="cursor_brain"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="cursor_brain"]
frames = SubResource( 2 )
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="cursor_brain"]
stream = ExtResource( 25 )
autoplay = true

[node name="background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 150, 100 )
scale = Vector2( 0.2, 0.2 )
z_index = -69
texture = ExtResource( 12 )
script = ExtResource( 20 )

[node name="aa" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 20, 20 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ab" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 50, 20 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ac" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 80, 20 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ad" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 110, 20 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ae" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 140, 20 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ba" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 20, 50 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="bb" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 50, 50 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="bc" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 80, 50 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="bd" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 110, 50 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="be" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 140, 50 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ca" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 20, 80 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="cb" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 50, 80 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="cc" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 80, 80 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="cd" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 110, 80 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ce" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 140, 80 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="da" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 20, 110 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="db" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 50, 110 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="dc" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 80, 110 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="dd" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 110, 110 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="de" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 140, 110 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ea" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 20, 140 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="eb" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 50, 140 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ec" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 80, 140 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ed" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 110, 140 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="ee" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 140, 140 )
scale = Vector2( 0.089, 0.089 )
z_index = -1
frames = SubResource( 3 )
animation = "gem"
script = ExtResource( 21 )

[node name="pause" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="pause"]
modulate = Color( 1, 1, 1, 0.505882 )
position = Vector2( 149.5, 100 )
scale = Vector2( 1.33778, 0.888889 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="pause"]
margin_left = 14.0
margin_top = 11.0
margin_right = 80.0
margin_bottom = 31.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 60 )
text = "unpause"

[node name="Button2" type="Button" parent="pause"]
margin_left = 100.0
margin_top = 76.0
margin_right = 166.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 60 )
text = "options"

[node name="Button4" type="Button" parent="pause"]
margin_left = 5.0
margin_top = 172.0
margin_right = 140.0
margin_bottom = 192.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 60 )
text = "back to title screen"

[node name="options" type="Popup" parent="pause"]
visible = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="pause/options"]
modulate = Color( 1, 1, 1, 0.505882 )
position = Vector2( 149.5, 100 )
scale = Vector2( 1.33778, 0.888889 )
texture = ExtResource( 10 )

[node name="Button3" type="Button" parent="pause/options"]
margin_left = 14.0
margin_top = 11.0
margin_right = 55.0
margin_bottom = 31.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 60 )
text = "back"

[node name="volume slider" type="Node2D" parent="pause/options"]
position = Vector2( 150, 75 )

[node name="HSlider" type="HSlider" parent="pause/options/volume slider"]
margin_left = -67.0
margin_top = 6.0
margin_right = 67.0
margin_bottom = 22.0
min_value = -80.0
max_value = 0.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="pause/options/volume slider"]
margin_left = -30.0
margin_top = -5.0
margin_right = 18.0
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 61 )
text = "volume"

[node name="score" type="Label" parent="."]
margin_left = 247.0
margin_top = 29.0
margin_right = 345.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 62 )
text = "_____"
align = 2
script = ExtResource( 4 )

[node name="highscore" type="Label" parent="."]
margin_left = 248.0
margin_top = 89.0
margin_right = 346.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 62 )
text = "_____"
align = 2
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="timer" type="Path2D" parent="Node2D"]
curve = SubResource( 18 )

[node name="PathFollow2D" type="PathFollow2D" parent="Node2D/timer"]
position = Vector2( 119, 166 )
rotation = -3.1306

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/timer/PathFollow2D"]
position = Vector2( -4.99963, 0.0549927 )
rotation = 4.71239
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 45 )
frame = 1
speed_scale = 3.0
playing = true
offset = Vector2( 0, 10 )

[node name="cb" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 7, 165 )
scale = Vector2( 0.0622222, 0.0622222 )
texture = ExtResource( 10 )

[node name="cbtimer" type="Path2D" parent="Node2D/cb"]
position = Vector2( -112.5, -2651.79 )
scale = Vector2( 16.0714, 16.0714 )
curve = SubResource( 46 )

[node name="PathFollow2D" type="PathFollow2D" parent="Node2D/cb/cbtimer"]
position = Vector2( 148, 165 )
rotation = 3.13455

[node name="Sprite" type="Sprite" parent="Node2D/cb/cbtimer/PathFollow2D"]
position = Vector2( -3.8147e-06, -3.8147e-06 )
scale = Vector2( 0.0444444, 0.0444444 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 194.0
margin_top = 104.0
margin_right = 366.0
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 59 )
text = "goal progress"
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Label"]
margin_left = 2.0
margin_top = 27.0
margin_right = 338.0
margin_bottom = 252.0
rect_scale = Vector2( 0.5, 0.05 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="pause/Button" to="pause" method="_on_Button_pressed"]
[connection signal="pressed" from="pause/Button2" to="pause" method="_on_Button2_pressed"]
[connection signal="pressed" from="pause/Button2" to="pause/options" method="_on_Button2_pressed"]
[connection signal="pressed" from="pause/Button4" to="pause" method="_on_Button4_pressed"]
[connection signal="pressed" from="pause/options/Button3" to="pause" method="_on_Button3_pressed"]
[connection signal="pressed" from="pause/options/Button3" to="pause/options" method="_on_Button3_pressed"]
[connection signal="value_changed" from="pause/options/volume slider/HSlider" to="pause/options/volume slider/HSlider" method="_on_HSlider_value_changed"]
